fix: export OpenAPI spec as UTF-8 and apply basicAuth globally